// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleAddOrderRequest 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
      "side": "side",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
    },
  ],
]
`;

exports[`handleAddOrderRequest 2`] = `
Array [
  Array [
    Object {},
    Object {
      "userOrder": "userOrder",
    },
    "add",
  ],
]
`;

exports[`handleAddOrderRequest invalid order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
    "invalid order",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xInvalidHash",
      "pair": "ZRX-WETH",
    },
    "invalid order",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
    "invalid order",
  ],
]
`;

exports[`handleAddOrderRequest invalid persist 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
    "invalid order",
  ],
]
`;

exports[`handleAddOrderRequest persist error 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
    "error",
  ],
]
`;

exports[`handleOrderRequest add 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleOrderRequest invalid requests 1`] = `Array []`;

exports[`handleOrderRequest terminate 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleTerminateOrderRequest 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleTerminateOrderRequest 2`] = `
Array [
  Array [
    Object {},
    Object {
      "userOrder": "userOrder",
    },
    "terminate",
  ],
]
`;

exports[`handleTerminateOrderRequest invalid request and order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "",
      "pair": "ZRX-WETH",
    },
    "invalid request",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
    "invalid order",
  ],
]
`;

exports[`handleTerminateOrderRequest persist error 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
    "error",
  ],
]
`;

exports[`handleWebSocketMessage invalid requests 1`] = `
Array [
  Array [
    "{\\"status\\":\\"invalid request\\"}",
  ],
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"channel\\",\\"status\\":\\"invalid request\\",\\"pair\\":\\"ZRX-WETH\\"}",
  ],
  Array [
    "{\\"method\\":\\"\\",\\"channel\\":\\"orders\\",\\"status\\":\\"invalid request\\",\\"pair\\":\\"ZRX-WETH\\"}",
  ],
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"orders\\",\\"status\\":\\"invalid request\\",\\"pair\\":\\"test\\"}",
  ],
]
`;

exports[`handleWebSocketMessage orders 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "method",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`sendErrorOrderResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"channel\\",\\"status\\":\\"status\\",\\"pair\\":\\"pair\\",\\"orderHash\\":\\"0xOrderHash\\"}",
  ],
]
`;

exports[`sendOrderBookSnapshotResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"orderBookSnapshot\\"}",
  ],
]
`;

exports[`sendOrderBookUpdateResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"update\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookUpdate\\":\\"orderBookUpdate\\"}",
  ],
]
`;

exports[`sendResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"channel\\",\\"status\\":\\"status\\",\\"pair\\":\\"pair\\"}",
  ],
]
`;

exports[`sendUserOrderResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"type\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"userOrder\\":{\\"test\\":\\"liveOrder\\"}}",
  ],
]
`;
